<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/about_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium_600"
        android:text="@string/about_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/top_banner_background"
        app:fontFamily="@font/montserrat_medium_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/about_image_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_logo_height"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/about_text_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_cloudinary_logo" />

    <TextView
        android:id="@+id/about_text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/about_info"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/cloudinary_signup_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_title"
        app:layout_goneMarginEnd="32dp" />

    <TextView
        android:id="@+id/cloudinary_signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/cloudinary_signup_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/linkColor"
        app:layout_constraintBottom_toTopOf="@id/github_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_goneMarginEnd="32dp" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/github_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/linkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>